--- a/Portals/_default/Skins/GoingAllNode/src/css/skin.css
+++ b/Portals/_default/Skins/GoingAllNode/src/css/skin.css
@@ -1,2 +1,5 @@
-
-/*# sourceMappingURL=skin.css.map */
+@import "mixins/*";
+@import "settings/*";
+@import "base/*";
+@import "objects/*";
+@import "_utility.css";
