--- a/Portals/_default/Skins/GoingAllNode/src/css/base/_layout.css
+++ b/Portals/_default/Skins/GoingAllNode/src/css/base/_layout.css
@@ -5,13 +5,9 @@
   max-width: $max-width;
   margin: 0 auto;
   position: relative;
-  padding: resolve($spacing-1 / 2) $spacing-1;
-  @media (min-width: $br-sm) {
-    padding: $spacing-1 $spacing-2;
-  }
+  overflow: hidden;
+  padding: $spacing-1 $spacing-2;
 }
-
-/* simple grid */
 
 
 /* flex row */
@@ -21,14 +17,15 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
+  margin-left: -$spacing-2;
+  margin-right: -$spacing-2;
 }
 
 /* flex items */
 .flex-split-50 {
   width: 100%;
-  padding: 0 $spacing-1;
+  padding: 0 $spacing-2;
   @media (min-width: $br-lg) {
-    padding: $spacing-1;
     width: 50%;
     max-width: 50%;
     align-self: stretch;
