building site content

--- a/Portals/0/2sxc/Content/_HalfSplit.cshtml
+++ b/Portals/0/2sxc/Content/_HalfSplit.cshtml
@@ -1,15 +1,13 @@
 <div class="flex-row">
   <div class="flex-split-50">
     <div class="block-navy">
-      <h2>@Content.Title1</h2>
-      <!-- Html.Raw gets the paragraph tags to output as html tags inststead of static text -->
+      <h3><a href="@Content.TitleLink1" target="_blank">@Content.Title1</a></h3>
       @Html.Raw(@Content.Body1)
     </div>
   </div>
   <div class="flex-split-50">
     <div class="block-orange">
-      <h2>@Content.Title2</h2>
-      <!-- Html.Raw gets the paragraph tags to output as html tags inststead of static text -->
+      <h3><a href="@Content.TitleLink2" target="_blank">@Content.Title2</a></h3>
       @Html.Raw(@Content.Body2)
     </div>
   </div>
