--- a/Portals/0/2sxc/Content/_Hero.cshtml
+++ b/Portals/0/2sxc/Content/_Hero.cshtml
@@ -9,5 +9,5 @@
 </div>
 
 <div class="hero-after">
-  <img src="/Portals/_default/Skins/GoingAllNode/img/undertale-frisk-walk.gif" class="hero-after_char" alt="undertale frisk walk">
+  <a href="http://undertale.com/" target="_blank"><img src="/Portals/_default/Skins/GoingAllNode/img/undertale-frisk-walk.gif" class="hero-after_char" alt="undertale frisk walk"></a>
 </div>
